source/blender/blenkernel/intern/library.c
@@ -95,6 +95,7 @@
 #include "BKE_lamp.h"
 #include "BKE_lattice.h"
 #include "BKE_library.h"
+#include "BKE_library_query.h"
 #include "BKE_linestyle.h"
 #include "BKE_mesh.h"
 #include "BKE_material.h"
@@ -862,6 +863,31 @@ void *BKE_libblock_copy_nolib(ID *id, const bool do_action)
 void *BKE_libblock_copy(ID *id)
 {
 	return BKE_libblock_copy_ex(G.main, id);
+}
+
+static bool id_relink_looper(void *UNUSED(user_data), ID **id_pointer, const int cd_flag)
+{
+	ID *id = *id_pointer;
+	if (id) {
+		/* See: NEW_ID macro */
+		if (id->newid) {
+			BKE_library_update_ID_link_user(id->newid, id, cd_flag);
+			*id_pointer = id->newid;
+		}
+		else if (id->flag & LIB_NEW) {
+			id->flag &= ~LIB_NEW;
+			BKE_libblock_relink(id);
+		}
+	}
+	return true;
+}
+
+void BKE_libblock_relink(ID *id)
+{
+	if (id->lib)
+		return;
+
+	BKE_library_foreach_ID_link(id, id_relink_looper, NULL, 0);
 }
 
 static void BKE_library_free(Library *lib)
